// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel-ts] format 1`] = `
"Missing semicolon. (1:10)
> 1 | namespace "a" {}
    |          ^"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"Identifier expected. (1:11)
> 1 | namespace "a" {}
    |           ^"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Missing semicolon. (1:10)
> 1 | namespace "a";
    |          ^"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"Identifier expected. (1:11)
> 1 | namespace "a";
    |           ^"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"Unexpected token, expected "{" (1:12)
> 1 | namespace a;
    |            ^"
`;

exports[`snippet: #2 [typescript] format 1`] = `
"'{' expected. (1:12)
> 1 | namespace a;
    |            ^"
`;
